<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_sort_by"
        android:orderInCategory="100"
        android:title="@string/action_sort_by"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/action_sort_by_popularity"
                    android:title="@string/action_sort_by_popularity" />
                <item android:id="@+id/action_sort_by_rating"
                    android:title="@string/action_sort_by_rating" />
                <item android:id="@+id/action_sort_by_fav"
                    android:title="@string/action_sort_by_fav" />
            </group>
        </menu>
    </item>
</menu>
